--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
+	<a href="./manage_logins.html">Управление токенами доступа</a>
+	<br/>
 	<a href="./visit_table.html">Таблица посещений</a>
+	<br/>
 	<a href="./tasks_table.html">Таблица заданий</a>
 </body>
 </html>
