--- a/visit_table.html
+++ b/visit_table.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="table/table.css">
     <script>
         function sendToGithub() {
-			window.students_file.commit(true);
+			window.studentsFile.commit(true);
         }
 
 		function addNewLesson() {
@@ -41,15 +41,14 @@
 		import { TableGenerator } from "./table/tableGenerator.mjs";
 		import { functions } from "./visit_table.mjs";
 		
-		
-		window.students_file = new GitHubFile("students.json");
-		window.students_file.fetch()
+		window.visitTable = document.getElementById("visitTable");
+		window.studentsFile = new GitHubFile("students.json");
+		window.students = new StudentsData(window.studentsFile);
+
+		window.studentsFile.fetch()
 			.then(() => {
-				window.students = new StudentsData(window.students_file.content);
-				window.students_file.content = window.students.students;
-			}).then(() => {
-				window.tableGen = new TableGenerator(window.students, functions, document.getElementById("visitTable"));
-				window.tableGen.generateTableContent();
+				window.visitTable.tableGenerator = new TableGenerator(window.students, functions, document.getElementById("visitTable"));
+				window.visitTable.tableGenerator.generateTableContent();
 			});
 	</script>
 </body>
