--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-	<a href="./manage_logins.html">Управление токенами доступа</a>
+	<a href="./manage_logins">Управление токенами доступа</a>
 	<br/>
-	<a href="./visit_table.html">Таблица посещений</a>
+	<a href="./visit_table">Таблица посещений</a>
 	<br/>
-	<a href="./tasks_table.html">Таблица заданий</a>
+	<a href="./tasks_table">Таблица заданий</a>
 </body>
 </html>
