--- a/manage_logins/index.html
+++ b/manage_logins/index.html
@@ -5,7 +5,7 @@
 	<meta charset='utf-8'>
 	<title>Drenes club - Manage Logins</title>
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
-	<link rel="stylesheet" href="table/table.css">
+	<link rel="stylesheet" href="../0_table/table.css">
     <style>
 		.table .localStorage {
 			color: green;
@@ -41,7 +41,7 @@
 	<button onclick="newLogin()">New Login</button>
 	<table id="loginsTable" class="table"></table>
 	<script type="module">
-		import { TableGenerator } from "./table/tableGenerator.mjs";
+		import { TableGenerator } from "../0_table/tableGenerator.mjs";
 		import { functions } from "./manage_logins_table.mjs";
 		import { GithubLogins } from "./manage_logins.mjs";
 
