--- a/visit_table/index.html
+++ b/visit_table/index.html
@@ -5,7 +5,7 @@
 	<meta charset='utf-8'>
 	<title>Drenes club - Visit table</title>
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
-	<link rel="stylesheet" href="table/table.css">
+	<link rel="stylesheet" href="../0_table/table.css">
     <script>
         function sendToGithub() {
 			window.studentsFile.commit(true);
@@ -36,9 +36,9 @@
 	<button onclick="addNewStudent()">New Student</button>
 	<table id="visitTable" class="table"></table>
 	<script type="module">
-		import { GitHubFile } from "./github/github_files.mjs";
-		import { StudentsData } from "./parse_data/students_data.js";
-		import { TableGenerator } from "./table/tableGenerator.mjs";
+		import { GitHubFile } from "../0_github/github_files.mjs";
+		import { StudentsData } from "../0_parse_data/students_data.js";
+		import { TableGenerator } from "../0_table/tableGenerator.mjs";
 		import { functions } from "./visit_table.mjs";
 		
 		window.visitTable = document.getElementById("visitTable");
