Fix "Add new task"

--- a/tasks_table/index.html
+++ b/tasks_table/index.html
@@ -21,7 +21,7 @@
 			let id = prompt("Task id:\n");
 			let name = prompt("Task name:\n");
 			if (id && name) {
-				window.tasksFile.conent.push({"id": id, "name": name});
+				window.tasksFile.content.push({"id": id, "name": name});
 				rerender();
 			}
 		}
