--- a/visit_table/index.html
+++ b/visit_table/index.html
@@ -18,6 +18,17 @@
 				window.visitTable.tableGenerator.generateTableContent();
 			}
 		}
+		
+		function addNewLessonToday() {
+			const date = new Date();
+			const dateString = date.toLocaleDateString('ru-RU', {
+				year: "numeric",
+				month: "2-digit",
+				day: "2-digit"
+			})
+			window.students.addNewLesson(dateString)
+			window.visitTable.tableGenerator.generateTableContent();
+		}
 
 		function addNewStudent() {
 			let id = prompt("\"Фамилия Имя\"\n");
@@ -33,6 +44,7 @@
 	<button onclick="sendToGithub()" style="color: red;">Send to GitHub</button>
 	<button onclick="window.visitTable.tableGenerator.generateTableContent();">Rerender table</button>
 	<button onclick="addNewLesson()">New Lesson</button>
+	<button onclick="addNewLessonToday()">New Lesson (today)</button>
 	<button onclick="addNewStudent()">New Student</button>
 	<table id="visitTable" class="table"></table>
 	<script type="module">
