Add "Clear localStorage" button

--- a/manage_logins/index.html
+++ b/manage_logins/index.html
@@ -39,6 +39,7 @@
 </head>
 <body>
 	<button onclick="newLogin()">New Login</button>
+	<button onclick="localStorage.clear()">Clear localStorage</button>
 	<table id="loginsTable" class="table"></table>
 	<script type="module">
 		import { TableGenerator } from "../0_table/tableGenerator.mjs";
