--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 	<a href="./visit_table">Таблица посещений</a>
 	<br/>
 	<a href="./tasks_table">Таблица заданий</a>
+	<br/>
+	<a href="./git_table">Git репозитории</a>
 </body>
 </html>
