--- a/tasks_table/index.html
+++ b/tasks_table/index.html
@@ -29,28 +29,18 @@
 </head>
 
 <body>
-	<button onclick="addNewTask()">New Task</button>
+	<select id="club-selector" onchange="localStorage.setItem('club-index', this.value); window.location.reload();">
+		<option value="0">PTHS</option>
+		<option value="1">Academy</option>
+	</select>
 	<br/>
 	<table id="studentsTable" class="table"></table>
 	<table id="tasksTable" class="table"></table>
 	<script>
+		document.querySelector("#club-selector").value = localStorage.getItem("club-index");
+
 		window.studentsTable = document.getElementById("studentsTable");
 		window.tasksTable = document.getElementById("tasksTable");
-
-		window.addEventListener("keydown", (event) => {
-			switch (event.key) {
-				case "ArrowLeft":
-					if (window.studentsTable.querySelector("td.current_student")) {
-						window.studentsTable.querySelector("td.current_student").focus();
-					} else {
-						window.studentsTable.firstChild.click();
-					}
-					break;
-				case "ArrowRight":
-					window.tasksTable.lastChild.click();
-					break;
-			}
-		});
 	</script>
 	<script type="module">
 		import config from "../config.json" with { type: "json" };
